v8/tests/messages/multi-default-switch.out
multi-default-switch.js:3: Uncaught SyntaxError: More than one default clause in switch statement
  default: break;
  ^^^^^^^
