v8/tests/messages/multi-default-switch.js
switch (foo) {
  default: break;
  default: break;
}
